# zerostash

./: Cross.toml
.github/workflows/: rust.yml
zerostash/: Cargo.toml
zerostash-files/: Cargo.toml
zerostash-files/benches/: bench.rs
zerostash-files/src/: files.rs  lib.rs
zerostash-files/src/stash/: store.rs
zerostash-fuse/: Cargo.toml
zerostash-fuse/src/: mount.rs
zerostash/src/: commands.rs
zerostash/src/commands/: ls.rs
