[package]
name = "zerostash"
description = "Safe and secure backup CLI"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
repository = "https://github.com/symmetree-labs/zerostash"
license = "MIT/Apache-2.0"
version = "0.5.0"
edition = "2021"
keywords = ["crypto", "cli", "security", "filesystem", "backup"]
categories = ["cryptography", "filesystem", "command-line-utilities"]


[dependencies]
anyhow = "1.0.65"
thiserror = "1.0.37"
clap = "3.2.22"
infinitree = { version = "0.9.0", features = ["cryptobox", "yubikey"] }
infinitree-backends = { version = "0.9.0", default-features = false, features = ["rustls"] }
zerostash-files = { version = "0.5.0", path = "../zerostash-files" }
zerostash-fuse = { version = "0.1.0", path = "../zerostash-fuse", optional = true}
rpassword = "7.0.0"
rprompt = "1.0.5"
serde = { version = "1.0.145", features = ["serde_derive"] }
toml = "0.5.9"
bech32 = "0.9.1"

dirs = "4.0.0"
xdg = "2.4.1"

async-trait = "0.1.57"
humansize = "1.1.1"
chrono = { version = "0.4.22", default-features = false, features = ["std", "clock"] }
termcolor = "1.1.3"
nix = { version = "0.24.2", default-features = false, features = ["user"] }
abscissa_tokio= "0.6.0"
abscissa_core= "0.6.0"
regex = "1.6.0"

secrecy = { version = "0.8.0", features = ["serde"] }
scc = {version = "1.1.0", optional = true}
fuse_mt = {version = "0.6.0", optional = true}
tracing = {version = "0.1.37", optional = true}
ctrlc = {version = "3.2.3", optional = true}

[features]
fuse = ["dep:zerostash-fuse", "dep:scc", "dep:fuse_mt", "dep:ctrlc", "dep:tracing"]

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.7.0"

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
abscissa_tokio = "0.6.0"
walkdir = "2.3.2"
tokio = { version = "1.21.2", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
criterion = "0.3.6"

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"

#[[bench]]
#name = "bench"
#harness = false
#path = "../bench/main.rs"
